end of day three

--- a/source/ts/components/task-list/task-list-component.html
+++ b/source/ts/components/task-list/task-list-component.html
@@ -4,6 +4,7 @@
     You've got {{ ctrl.tasks.length }} tasks.
   </span>
   <button ng-click="ctrl.addTask()">Add task</button>
+  <button ng-click="ctrl.getTasks()">Get Tasks from Server</button>
 </div>
 
  <div>
