--- a/app/src/components/main/main-component.html
+++ b/app/src/components/main/main-component.html
@@ -3,6 +3,6 @@
     <ngc-login-form on-submit="ctrl.login(data)"></ngc-login-form>
   </div>
   <div ng-show="ctrl.isAuthenticated">
-    <ngc-tasks username="ctrl.arr"></ngc-tasks>
+    <ngc-tasks username="ctrl.username"></ngc-tasks>
   </div>
 </div>
