--- a/app/src/components/task-list/task-list-component.html
+++ b/app/src/components/task-list/task-list-component.html
@@ -1,5 +1,9 @@
 <div>
-  Hello, {{ ctrl.username }}!
-  You've got {{ ctrl.numberOfTasks }} tasks<br/>
+  Hello, {{ ctrl.username }}! You've got {{ ctrl.tasks.length }} tasks
+  <br/>
   <button ng-click="ctrl.addTask()">Add task</button>
+</div>
+
+<div>
+  <ngc-task ng-repeat="task in ctrl.tasks" task="task"></ngc-task>
 </div>
