--- a/app/src/components/task-list/task-list-component.html
+++ b/app/src/components/task-list/task-list-component.html
@@ -1,7 +1,9 @@
 <div>
   Hello, {{ ctrl.username }}! You've got {{ ctrl.tasks.length }} tasks
   <br/>
-  <button ng-click="ctrl.addTask()">Add task</button>
+  <button ng-click="ctrl.addTask()">Add Task</button>
+  <br/>
+  <button ng-click="ctrl.getTasks()">Get Tasks</button>
 </div>
 
 <div>
