Upgraded task-component to angular 2 - Included reflect-metadata in app.ts to support @decorators - Commented test file for task-component - Upgraded router provider so it can be injected in angular 2 components to allow integrated navigation - Added new TaskComponent as a provider so it can receive injections from angular 1 upgraded providers.

--- a/app/src/components/task-list/task-list-component.html
+++ b/app/src/components/task-list/task-list-component.html
@@ -11,9 +11,10 @@
   </header>
   <div class="mt4 mb4" ui-view="actionArea"></div>
   <div class="md-col-8 mx-auto rounded tasks-list mb4">
-    <ngc-task ng-repeat="task in ctrl.tasks" 
-      task="task" 
-      user="ctrl.users[task.owner]">
-    </ngc-task>
+    <span ng-repeat="task in ctrl.tasks">
+      <ngc-task [task]="task"
+        [user]="ctrl.users[task.owner]">
+      </ngc-task>
+    </span>
   </div>
 </div>
