ng-forward configuration - Added required dependencies in package.json (@reactivex needed to be updated to alpha.10 to work with ng-forward) - Refactored task-component to be ang2 like component, view is still the same - Bootstrapped application through ng-forward that includes the new bundle (module) for refactored components - Created root component so the app can be bootstrapped with providers in ang1 pattern.

--- a/app/src/components/task-list/task-list-component.html
+++ b/app/src/components/task-list/task-list-component.html
@@ -12,8 +12,8 @@
   <div class="mt4 mb4" ui-view="actionArea"></div>
   <div class="md-col-8 mx-auto rounded tasks-list mb4">
     <ngc-task ng-repeat="task in ctrl.tasks" 
-      task="task" 
-      user="ctrl.users[task.owner]">
+      [task]="task"
+      [user]="ctrl.users[task.owner]">
     </ngc-task>
   </div>
 </div>
