login-form-component refactor - craeted output bindings - deleting old view - updated main-component to use ang2 syntax when invoking login-form-component

--- a/app/src/components/main/main-component.html
+++ b/app/src/components/main/main-component.html
@@ -1,7 +1,7 @@
 <ngc-login-form
   ng-hide="ctrl.user.isAuthenticated"
-  on-submit="ctrl.login(data)"
-  error-message="ctrl.errorMessage">
+  (on-submit)="ctrl.login(data)"
+  [error-message]="ctrl.errorMessage">
 </ngc-login-form>
 
 <div class="clearfix white bg-blue"
